--- a/HavaDurumu/HavaDurumu/Views/Base.lproj/Main.storyboard
+++ b/HavaDurumu/HavaDurumu/Views/Base.lproj/Main.storyboard
@@ -17,7 +17,110 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Mersin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NTk-Hy-KK6">
+                            <view contentMode="scaleToFill" id="2n4-WY-vYj">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mersin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vZt-p4-3CK">
+                                        <rect key="frame" x="32" y="82" width="80" height="33"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="18°C" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u5F-Fa-uE1">
+                                        <rect key="frame" x="32" y="160" width="57" height="32"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" verticalHuggingPriority="251" image="sun.min" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="xdK-9T-kAx">
+                                        <rect key="frame" x="265" y="83" width="112" height="105"/>
+                                    </imageView>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="30N-cc-KWe">
+                                        <rect key="frame" x="32" y="250" width="329" height="408"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="5KN-21-c3E">
+                                            <size key="itemSize" width="323" height="128"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="2dw-BR-jpC">
+                                                <rect key="frame" x="3" y="0.0" width="323" height="128"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="pkn-UU-ezI">
+                                                    <rect key="frame" x="0.0" y="0.0" width="323" height="128"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Pzt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="loA-Jm-lgc">
+                                                            <rect key="frame" x="8" y="8" width="54" height="31"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="21/18°C" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W3L-ZD-b7F">
+                                                            <rect key="frame" x="63" y="50" width="86" height="21"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cloud.rain" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="kub-D4-b1D">
+                                                            <rect key="frame" x="186" y="18.666666666666686" width="111" height="84"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Yağış Olasılığı: %100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nLD-by-Pej">
+                                                            <rect key="frame" x="171" y="102" width="141" height="18"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </collectionViewCellContentView>
+                                                <size key="customSize" width="323" height="128"/>
+                                            </collectionViewCell>
+                                        </cells>
+                                    </collectionView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Yağış Olasılığı: %34" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LnK-0C-FzA">
+                                        <rect key="frame" x="207" y="707" width="149" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nem Oranı: %64" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vEg-5i-K5b">
+                                        <rect key="frame" x="32" y="706" width="127" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <viewLayoutGuide key="safeArea" id="zyw-aV-hms"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="u5F-Fa-uE1" firstAttribute="leading" secondItem="zyw-aV-hms" secondAttribute="leading" constant="32" id="1co-bW-qe1"/>
+                                    <constraint firstItem="30N-cc-KWe" firstAttribute="top" secondItem="xdK-9T-kAx" secondAttribute="bottom" constant="61.329999999999998" id="A0J-t2-eO0"/>
+                                    <constraint firstItem="LnK-0C-FzA" firstAttribute="leading" secondItem="vEg-5i-K5b" secondAttribute="trailing" constant="48" id="A8C-tO-b5R"/>
+                                    <constraint firstItem="u5F-Fa-uE1" firstAttribute="top" secondItem="vZt-p4-3CK" secondAttribute="bottom" constant="45" id="DCo-IM-KdH"/>
+                                    <constraint firstItem="zyw-aV-hms" firstAttribute="bottom" secondItem="vEg-5i-K5b" secondAttribute="bottom" constant="91" id="FKx-uI-Ptl"/>
+                                    <constraint firstItem="zyw-aV-hms" firstAttribute="trailing" secondItem="LnK-0C-FzA" secondAttribute="trailing" constant="37" id="N36-iB-Ql6"/>
+                                    <constraint firstItem="zyw-aV-hms" firstAttribute="trailing" secondItem="xdK-9T-kAx" secondAttribute="trailing" constant="16" id="N6Z-fX-zQE"/>
+                                    <constraint firstItem="vEg-5i-K5b" firstAttribute="top" secondItem="30N-cc-KWe" secondAttribute="bottom" constant="48" id="NQj-DT-MAj"/>
+                                    <constraint firstItem="LnK-0C-FzA" firstAttribute="leading" secondItem="vEg-5i-K5b" secondAttribute="trailing" constant="48" id="VFR-cX-usH"/>
+                                    <constraint firstItem="vZt-p4-3CK" firstAttribute="leading" secondItem="zyw-aV-hms" secondAttribute="leading" constant="32" id="XbL-Es-uLa"/>
+                                    <constraint firstItem="30N-cc-KWe" firstAttribute="leading" secondItem="zyw-aV-hms" secondAttribute="leading" constant="32" id="etK-zW-hTB"/>
+                                    <constraint firstItem="vEg-5i-K5b" firstAttribute="leading" secondItem="zyw-aV-hms" secondAttribute="leading" constant="32" id="g9v-uO-2yO"/>
+                                    <constraint firstItem="xdK-9T-kAx" firstAttribute="top" secondItem="zyw-aV-hms" secondAttribute="top" constant="23" id="mkJ-Nv-0Fv"/>
+                                    <constraint firstItem="xdK-9T-kAx" firstAttribute="leading" secondItem="vZt-p4-3CK" secondAttribute="trailing" constant="153" id="pJL-Yf-8h3"/>
+                                    <constraint firstItem="zyw-aV-hms" firstAttribute="trailing" secondItem="30N-cc-KWe" secondAttribute="trailing" constant="32" id="vOV-vj-JVG"/>
+                                    <constraint firstItem="vZt-p4-3CK" firstAttribute="top" secondItem="zyw-aV-hms" secondAttribute="top" constant="23" id="vh3-tC-gTv"/>
+                                    <constraint firstItem="30N-cc-KWe" firstAttribute="top" secondItem="u5F-Fa-uE1" secondAttribute="bottom" constant="58" id="wVj-4p-QWf"/>
+                                    <constraint firstItem="zyw-aV-hms" firstAttribute="bottom" secondItem="LnK-0C-FzA" secondAttribute="bottom" constant="90" id="yA0-cc-aYc"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mersin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NTk-Hy-KK6">
                                 <rect key="frame" x="32" y="82" width="80" height="33"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                 <nil key="textColor"/>
@@ -29,7 +132,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="sun.min" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="QFi-MR-91l">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" verticalHuggingPriority="251" image="sun.min" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="QFi-MR-91l">
                                 <rect key="frame" x="265" y="83" width="112" height="105"/>
                             </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3I0-Yk-TbM">
@@ -86,7 +189,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nem Oranı: %64" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="62q-ly-Rf6">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Nem Oranı: %64" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="62q-ly-Rf6">
                                 <rect key="frame" x="32" y="706" width="127" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -116,6 +219,13 @@
                             <constraint firstItem="NTk-Hy-KK6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="32" id="qQW-jS-jf2"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="cityNameLabel" destination="NTk-Hy-KK6" id="DYP-CP-3Ve"/>
+                        <outlet property="degreeLabel" destination="ZUX-al-gcH" id="ys5-bo-JDD"/>
+                        <outlet property="humidityLabel" destination="62q-ly-Rf6" id="Tpy-MI-eJX"/>
+                        <outlet property="popLabel" destination="AdA-WW-deF" id="oPx-ab-14e"/>
+                        <outlet property="weatherImageView" destination="QFi-MR-91l" id="zZF-ET-w3F"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
